Resolve remaining scrollbar errors

--- a/main.css
+++ b/main.css
@@ -249,13 +249,13 @@ body {
 }
 
 .project-details {
-	-moz-transition: height .5s;
-    -ms-transition: height .5s;
-    -o-transition: height .5s;
-    -webkit-transition: height .5s;
-    transition: height .5s;
+	-moz-transition: max-height .5s;
+    -ms-transition: max-height .5s;
+    -o-transition: max-height .5s;
+    -webkit-transition: max-height .5s;
+    transition: max-height .5s;
 	overflow: hidden;
-	height: 0;
+	max-height: 0;
 }
 
 .project-urls {
